# ml-memory

./: README.md  docker-compose.yml  gemini.md
backend/: .gitignore  README.md  app.py  brain.py  celery_config.py  database.py  dockerfile  models.py  pyproject.toml  requirements.txt  worker.py
backend/tests/: test_api.py
frontend/: .gitignore  dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatStreaming.tsx
