[project]
name = "memory-bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.120.3",
    "groq>=0.33.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
